package simulateur;

public interface File {

	public void ajouter(Composant c);

	public void traiter();
}
