@startuml mati-sprint1-classes
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam defaultFontName Sans
skinparam linetype ortho
hide empty members

enum Etat {
  UP
  DW
  ND
}

class Lien {
  -etat: Etat
  -nom: String
  +setValeur(b: Etat)
  +getValeur(): Etat
}

abstract class Composant {
  +calculer()
}
class And
class Or
class Non
class Duplicateur
class Porte
class Bascule
class BasculeD
class BasculeClock

class TableauLien
class File
class FileListe
class Module
class Simulateur

Composant <|-- And
Composant <|-- Or
Composant <|-- Non
Composant <|-- Duplicateur
Composant <|-- Porte
Composant <|-- Bascule
Bascule <|-- BasculeD
Bascule <|-- BasculeClock

Composant o-- "*" Lien : entrees/sorties
Lien --> Etat
TableauLien o-- "*" Lien
Module o-- "*" Composant
Simulateur ..> Module
FileListe *-- File

@enduml
